# generic-marketing-agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  DOCTOR-PORTAL.md  LICENSE  MARKETING_AGENT_DESIGN.md  README.md  app.json  body.json  build-info-latest.json  build-info.json  check.js  docker-compose.staging.yml  docker-compose.yml  fix-firewall.bat  migration-log.txt  package-lock.json  package.json  pnpm-lock.yaml  railway.toml  seed-fixed.sql  turbo.json  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
apps/kyc-ml/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/kyc-ml/app/: __init__.py  main.py  schemas.py
apps/kyc-ml/app/core/: auth.py  config.py  errors.py
apps/kyc-ml/app/routers/: aadhaar.py  verify.py
apps/kyc-ml/app/services/: face.py  masking.py  ocr.py  storage.py
apps/kyc-ml/tests/: conftest.py  test_endpoints.py  test_masking.py  test_ocr.py
docs/: API.md  ARCHITECTURE.md  CFO-CEO-Assessment-2026-04-15.md  DATA_MODEL.md  PRD.md  PRIVACY.md  PUSH_NOTIFICATIONS_TESTING.md  SETUP.md  admin-ui-testing-strategy.md  api-testing-strategy.md  approach-and-patient-verification.md  approval.md  database-recovery.md  docs-hosting-plan.md  doctor-verification-india.md  fcube-finance-pack.md  go-live-plan.md  hosting-setup.md  marketinglaunch.md  mobile-app-test-cases.md  notification-postman-collection.json  notification-qa-checklist.md  notification-system.md  patient-kyc-end-to-end-test-guide.md  pharmacy-legal-compliance-india.md  pharmacy-partner-integration-plan.md  review-checklist.md  (+5 more)
(+780 files in other folders)
