[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "curex24-kyc-ml"
version = "0.1.0"
description = "Aadhaar OCR + face-match sidecar for curex24"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110,<1.0",
  "uvicorn[standard]>=0.27,<1.0",
  "python-multipart>=0.0.9",
  "pydantic>=2.6,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "httpx>=0.27,<1.0",
  "supabase>=2.4,<3.0",
  "numpy>=1.26,<2.0",
  "opencv-python-headless>=4.9,<5.0",
  "Pillow>=10.2,<11.0",
  "paddleocr>=2.7,<3.0",
  "paddlepaddle>=2.6,<3.0",
  "deepface>=0.0.92",
  "tensorflow-cpu>=2.15,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "ruff>=0.4,<1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
